# Random-Forest-Modelling

./: .flake8  .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: main.yml  publish.yml
random_forest_modelling/: pyproject.toml
random_forest_modelling/exceptions/: data.py
random_forest_modelling/utils/: data_cleaning.py
random_forest_package/random_forest_package/: base_model.py  classifier.py  evaluate.py  evaluator.py  exceptions.py  model.py  preprocess.py  regressor.py  train.py  trainer.py  tuner.py  utils.py  visualizer.py
random_forest_package/tests/: test_model.py  test_tuner.py  test_visualizer.py
